# autoapiframework

./: README.md
docs/: index.rst
docs/doc/application_framework/contents/: 10_introduction.rst  21_sw_architecture.rst  23_model.rst  24_api.rst  25_configuration.rst  26_platform_support.rst  27_code_generation.rst  28_sw_library.rst  29_testing.rst  30_glossary.rst
docs/doc/application_framework/contents/code/: controller_interface.h  data_ptr.h  error_domain.h  executable_controller_base.h  executor.h  future.h  logging.h
docs/doc/application_framework/contents/figures/: arch-app-module.uxf  arch-consumer-module.uxf  arch-consumer_get_register_api.uxf  arch-consumer_operation_api.uxf  arch-control-module.uxf  arch-executor-module.uxf  arch-internal-com-module.uxf  arch-module-if.uxf  arch-provider-module.uxf  arch-provider_allocate_set_api.uxf  arch-provider_operation_api.uxf  cac-cd_app_module.puml  cac-cd_datatypes.puml  cac-cd_executable.puml  cac-cd_module_interface.puml  cac-cd_task.puml  cac-overview.puml
docs/doc/examples/bp-ifex-vaf/: bp-ifex-vaf.rst
docs/doc/requirements/: requirements.rst
docs/doc/standardization/: standardization.rst
docs/doc/vss_gui_tool/: 10_introduction.rst  20_steps.rst  30_openpoints.rst
examples/bp-ifex-vaf/: README.md
examples/bp-ifex-vaf/.devcontainer/: devcontainer.json
examples/bp-ifex-vaf/Interfaces/: README.md  ifex-derived-model.json  ifex.py  interfaces.py
examples/bp-ifex-vaf/Interfaces/export/: Interfaces.json  interfaces.py
examples/bp-ifex-vaf/model/ifex/: ifex-sample-zf.yaml
examples/bp-vss-vaf/: README.md
examples/bp-vss-vaf/.devcontainer/: devcontainer.json
examples/bp-vss-vaf/IntegrationProject/: .clang-format  .vafconfig.json  CMakeLists.txt  README.md  conanfile.py
examples/bp-vss-vaf/IntegrationProject/cmake/: FindSilKit.cmake
examples/bp-vss-vaf/IntegrationProject/model/vaf/: integration_project.py  integration_project_silkit.py  model.json  model.py
examples/bp-vss-vaf/IntegrationProject/model/vaf/application_modules/: __init__.py  import_instances.py  import_speed_hazard_detection.py  import_test_module.py  import_vehicle_speed_calculation.py
examples/bp-vss-vaf/IntegrationProject/src/: CMakeLists.txt
examples/bp-vss-vaf/IntegrationProject/src/application_modules/: CMakeLists.txt  speed_hazard_detection  test_module  vehicle_speed_calculation
examples/bp-vss-vaf/IntegrationProject/src/executables/: CMakeLists.txt
examples/bp-vss-vaf/IntegrationProject/src/executables/demo_executable/: CMakeLists.txt
examples/bp-vss-vaf/IntegrationProject/src/executables/demo_executable/src/: user_controller.cpp
examples/bp-vss-vaf/IntegrationProject/src/executables/test_executable/: CMakeLists.txt
examples/bp-vss-vaf/IntegrationProject/src/executables/test_executable/include/: user_controller.h
examples/bp-vss-vaf/Interfaces/: .vafconfig.json  interfaces.py  model.py  vss-derived-model.json  vss.py
examples/bp-vss-vaf/Interfaces/export/: interfaces.py
examples/bp-vss-vaf/SpeedHazardDetection/: .gitignore  .vafconfig.json  CMakeLists.txt  README.md
examples/bp-vss-vaf/SpeedHazardDetection/implementation/: CMakeLists.txt
examples/bp-vss-vaf/SpeedHazardDetection/implementation/cmake/: speed_hazard_detectionConfig.cmake
examples/bp-vss-vaf/SpeedHazardDetection/implementation/include/demo/: speed_hazard_detection.h
examples/bp-vss-vaf/SpeedHazardDetection/implementation/src/: speed_hazard_detection.cpp
examples/bp-vss-vaf/SpeedHazardDetection/implementation/test/unittest/: CMakeLists.txt
examples/bp-vss-vaf/SpeedHazardDetection/implementation/test/unittest/include/demo/: speed_hazard_detection_base.h
examples/bp-vss-vaf/SpeedHazardDetection/implementation/test/unittest/src/: tests.cpp
examples/bp-vss-vaf/SpeedHazardDetection/implementation/test/unittest/src/demo/: speed_hazard_detection_base.cpp
examples/bp-vss-vaf/SpeedHazardDetection/model/: model.json  model.py  speed_hazard_detection.py
examples/bp-vss-vaf/SpeedHazardDetection/model/imported_models/: __init__.py
examples/bp-vss-vaf/TestModule/: .gitignore  CMakeLists.txt  README.md
examples/bp-vss-vaf/TestModule/implementation/: CMakeLists.txt
examples/bp-vss-vaf/TestModule/implementation/cmake/: test_moduleConfig.cmake
examples/bp-vss-vaf/TestModule/implementation/include/demo/: test_module.h
examples/bp-vss-vaf/TestModule/implementation/src/: test_module.cpp
examples/bp-vss-vaf/TestModule/implementation/test/unittest/: CMakeLists.txt
examples/bp-vss-vaf/TestModule/implementation/test/unittest/include/demo/: test_module_base.h
examples/bp-vss-vaf/TestModule/implementation/test/unittest/src/: main.cpp  tests.cpp
examples/bp-vss-vaf/TestModule/implementation/test/unittest/src/demo/: test_module_base.cpp
examples/bp-vss-vaf/TestModule/model/: model.json  model.py  test_module.py
examples/bp-vss-vaf/TestModule/model/imported_models/: Interfaces.json  _imported_models.json
examples/bp-vss-vaf/VehicleSpeedCalculation/: CMakeLists.txt  README.md  conanfile.py
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/: CMakeLists.txt
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/cmake/: vehicle_speed_calculationConfig.cmake
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/include/demo/: vehicle_speed_calculation.h
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/src/: vehicle_speed_calculation.cpp
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/test/: CMakeLists.txt
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/test/unittest/: CMakeLists.txt
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/test/unittest/include/demo/: vehicle_speed_calculation_base.h
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/test/unittest/src/: tests.cpp
examples/bp-vss-vaf/VehicleSpeedCalculation/implementation/test/unittest/src/demo/: vehicle_speed_calculation_base.cpp
examples/bp-vss-vaf/VehicleSpeedCalculation/model/: model.json  model.py  vehicle_speed_calculation.py
examples/bp-vss-vaf/model/vss/: vss-sample-zf.json
