##=======================================================================
##  COPYRIGHT
##  -------------------------------------------------------------------------------------------------------------------
##  \verbatim
##  Copyright (c) 2024-2026 by Vector Informatik GmbH. All rights reserved.
##  SPDX-License-Identifier: Apache-2.0
##  \endverbatim
##  -------------------------------------------------------------------------------------------------------------------
##  FILE DESCRIPTION
##  -------------------------------------------------------------------------------------------------------------------
##        \file    CMakeLists.txt
##=======================================================================

add_subdirectory(demo_executable)
add_subdirectory(test_executable)
